build: remove sourceMap from tsconfig.json

--- a/templates/typescript/tsconfig.json
+++ b/templates/typescript/tsconfig.json
@@ -9,8 +9,7 @@
       "esnext"
     ],
     "strict": true,
-    "sourceMap": true,
-    "target": "esnext",
+    "target": "esnext"
   },
   "exclude": [
     "node_modules"
