--- a/templates/typescript/tsconfig.json
+++ b/templates/typescript/tsconfig.json
@@ -10,7 +10,10 @@
       "esnext"
     ],
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules"]
