--- a/templates/typescript/tsconfig.json
+++ b/templates/typescript/tsconfig.json
@@ -5,12 +5,10 @@
     "jsx": "react",
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "strict": true,
     "target": "esnext",
+    "baseUrl": "src",
     "paths": {
       "@/*": ["*"]
     }
